# name_origin

./: CLAUDE.md  README.md  create_clean_dataset.py  evaluate_method.py  evaluation_results.csv  evaluation_summary.txt  main.py  pyproject.toml
data/: final_forenames.csv  final_surnames.csv
utils/: cleaning.py
