[project]
name = "name-origin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "names-dataset>=3.3.1",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "scikit-learn>=1.8.0",
    "transliterate>=1.10.2",
    "unidecode>=1.4.0",
]
